--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: front
     spec:
+      serviceAccountName: projectlister
       containers:
       - name: front
         image: telliottio/front:latest
