Add open tracing with Jaeger. Ran a test using github.com/rakyll/hey which showed a need for improvement. Tracing indicated that loading projects was taking the bulk of the longer spans. Added basic caching to improve performance.

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,6 +17,11 @@ spec:
       serviceAccountName: projectlister
       containers:
       - name: front
+        # env:
+        #   - name: JAEGER_AGENT_HOST
+        #     value: "jaeger-agent"
+        #   - name: JAEGER_AGENT_PORT
+        #     value: "6831"
         image: telliottio/front:latest
         imagePullPolicy: Always
         ports:
