--- a/deployment.yaml
+++ b/deployment.yaml
@@ -13,6 +13,9 @@ spec:
     metadata:
       labels:
         app: front
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "80"
     spec:
       serviceAccountName: projectlister
       containers:
