--- a/rbac.yaml
+++ b/rbac.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: projectlister
-  namespace: default
+  namespace: front
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
@@ -29,4 +29,4 @@ subjects:
 - kind: ServiceAccount
   name: projectlister
   # Namespace of the service account
-  namespace: default
+  namespace: front
