--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "grafonnet-lib"]
-	path = grafonnet-lib
+	path = thirdparty/grafonnet-lib
 	url = https://github.com/grafana/grafonnet-lib.git
