Add the environment name to front page headers

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -21,11 +21,16 @@ spec:
       serviceAccountName: projectlister
       containers:
       - name: front
-        # env:
+        env:
         #   - name: JAEGER_AGENT_HOST
         #     value: "jaeger-agent"
         #   - name: JAEGER_AGENT_PORT
         #     value: "6831"
+        - name: ENV
+          valueFrom:
+            configMapKeyRef:
+              name: kubeenv
+              key: context
         image: telliottio/front:latest
         imagePullPolicy: Always
         ports:
