Fix up Tiltfile for refactored deployment
Replace the deployment image with one injected by the kustomization.

--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -31,7 +31,7 @@ spec:
             configMapKeyRef:
               name: kubeenv
               key: context
-        image: telliottio/front:latest
+        image: front
         imagePullPolicy: Always
         ports:
         - containerPort: 80
