--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
       tags:
         - v* # Run only on version tags
 jobs:
-  deploy:
+  push:
     name: 'Build and Push'
     runs-on: ubuntu-latest
     steps:
@@ -35,3 +35,36 @@ jobs:
           IMAGE_NAME: "telliottio/front"
           TAG_NAME: ${{ steps.tagName.outputs.tag }}
           LATEST: "false"
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: push
+    steps:
+      - name: 'Checkout'
+        uses: actions/checkout@master
+        with:
+          fetch-depth: 1
+      - uses: olegtarasov/get-tag@v2
+        id: tagName
+      - name: 'Checkout deployments'
+        uses: actions/checkout@master
+        with:
+          ref: deploy
+          path: build/deployment
+      - name: Update deployment content
+        run: | 
+            cd build/deployment
+            git rm -rf .
+            cp -r ../../deployment/* .
+            sed 's/newTag: latest/newTag: ${{ steps.tagName.outputs.tag }}/' ../../deployment/kustomization.yaml > kustomization.yaml
+      - name: Commit
+        run: |
+            cd build/deployment
+            git config --global user.email "action@github.com"
+            git config --global user.name "GitHub Action"
+            git commit -m "${{ steps.tagName.outputs.tag }}" -a
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          directory: build/deployment
