--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,5 +66,6 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
+          branch: deploy
           github_token: ${{ secrets.GITHUB_TOKEN }}
           directory: build/deployment
