--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: run
         uses: cedrickring/golang-action@1.5.1
         with:
-          args: GOOS=linux GOARCH=amd64 go build -o build/front ./cmd/front
+          args: CGO_ENABLED=0 go build -o build/front ./cmd/front
       - name: Build & Push Container
         uses: opspresso/action-docker@master
         with:
