Add cloudprober to test front

--- a/deployment/kustomization.yaml
+++ b/deployment/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - namespace.yaml
 - rbac.yaml
 - ingress.yaml
+- cloudprober.yaml
 configMapGenerator:
 - files:
   - context=kubecontext.txt
