--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -21,16 +21,11 @@ spec:
       serviceAccountName: projectlister
       containers:
       - name: front
-        env:
+        #env:
         #   - name: JAEGER_AGENT_HOST
         #     value: "jaeger-agent"
         #   - name: JAEGER_AGENT_PORT
         #     value: "6831"
-        - name: ENV
-          valueFrom:
-            configMapKeyRef:
-              name: kubeenv
-              key: context
         image: front
         imagePullPolicy: Always
         ports:
