Fix cloudprober config

--- a/deployment/cloudprober.yaml
+++ b/deployment/cloudprober.yaml
@@ -16,12 +16,15 @@ metadata:
   name: cloudprober-config
   namespace: default
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cloudprober
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: cloudprober
   template:
     metadata:
       labels:
