--- a/deployment/ingress.yaml
+++ b/deployment/ingress.yaml
@@ -1,11 +1,9 @@
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: front
   namespace: front
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
   - host: telliott.io
@@ -13,5 +11,7 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: front
-          servicePort: http
+          service:
+              name: front
+              port:
+                name: http
