--- a/deployment/rbac.yaml
+++ b/deployment/rbac.yaml
@@ -4,7 +4,7 @@ metadata:
   name: projectlister
   namespace: front
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   # "namespace" omitted since ClusterRoles are not namespaced
